--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 scouter/demo/demo-env/apache-tomcat-7.0.67/bin/mydatabase.lck
-scouter/demo/demo-env/scouter/server/database/*
+scouter/demo/demo-env/scouter/server/database/
+scouter/demo/scouter.client.product-macosx.cocoa.x86_64/
