--- a/all-in-one-test/prometheus-grafana/docker-compose.yml
+++ b/all-in-one-test/prometheus-grafana/docker-compose.yml
@@ -7,10 +7,13 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
-      - "10080:9090"
+      - "20080:9090"
     command: --config.file=/etc/prometheus/prometheus.yml
   grafana:
     container_name: grafana
     image: grafana/grafana
+    volumes:
+      - ./grafana:/var/lib/grafana
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
     ports:
-      - "10081:3000"
+      - "20081:3000"
