--- a/all-in-one-test/prometheus-grafana/docker-compose.yml
+++ b/all-in-one-test/prometheus-grafana/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: prometheus
     image: prom/prometheus
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "20080:9090"
     command: --config.file=/etc/prometheus/prometheus.yml
